# ud_laba_second

./: CMakeLists.txt  README.md  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h
src/utec/disk/: btree.h  iterator.h  pagemanager.h
